gitops/applications/base/mailhog/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${ARGOCD_ENV_mailhog_namespace}
  labels:
    istio-injection: enabled
