gitops/applications/base/mailhog/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mailhog-ui
  namespace: mailhog
spec:
  gateways:
    - ${ARGOCD_ENV_mailhog_istio_internal_gateway_namespace}/${ARGOCD_ENV_mailhog_istio_internal_wildcard_gateway_name}
  hosts:
    - "mailhog.${ARGOCD_ENV_mailhog_internal_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: mailhog
            port:
              number: 8025
