gitops/applications/base/mailhog/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mailhog-auth
  namespace: ${ARGOCD_ENV_mailhog_istio_internal_gateway_namespace}
spec:
  selector:
    matchLabels:
      app: ${ARGOCD_ENV_mailhog_istio_internal_gateway_name}
  action: CUSTOM
  provider:
    name: ory-authz
  rules:
    - to:
        - operation:
            hosts: ["mailhog.${ARGOCD_ENV_mailhog_internal_dns_subdomain}", "mailhog.${ARGOCD_ENV_mailhog_internal_dns_subdomain}:*"]
